[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/item.gd" type="Script" id=1]

[node name="Item" type="VBoxContainer"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 92.0
margin_bottom = 92.0
rect_min_size = Vector2( 92, 92 )
disabled = true

[node name="Label" type="Label" parent="."]
margin_top = 96.0
margin_right = 92.0
margin_bottom = 110.0
text = "Button"
align = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
